[gd_scene load_steps=16 format=2]

[ext_resource path="res://Entities/Enemies/Hadger.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Enemies/Hadger.png" type="Texture" id=2]
[ext_resource path="res://Sound/PHs/bustmetal1.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/PHs/pl_step2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/PHs/pl_step4.wav" type="AudioStream" id=5]
[ext_resource path="res://Graphics/Sounds/Hadger/jump.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:Isaw")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stopmovingidiot"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:ouch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:ouch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "leapjump"
}, {
"args": [  ],
"method": "leapjump"
}, {
"args": [  ],
"method": "leapjump"
} ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:ouch")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Hit")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:jumpbusy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimationPlayer:current_animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Step1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Step2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.05292, 13.6567 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.91534
height = 10.7989

[sub_resource type="CapsuleShape2D" id=9]
radius = 13.8511
height = 5.10688

[node name="Hadger" type="KinematicBody2D" groups=[
"enemy",
"bouncy",
]]
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="SeeEmCast" type="RayCast2D" parent="."]
position = Vector2( -2, 0 )
z_index = -1
enabled = true
collision_mask = 5

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 10
frame = 1

[node name="GiveUpTimer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/LIDLBrandTimer = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/IdleIDK = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/Ouch = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="HoleRay" type="RayCast2D" parent="."]
position = Vector2( 10, 21 )
z_index = -1
enabled = true
cast_to = Vector2( 0, 2 )

[node name="HeadRay" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
z_index = -1
enabled = true
cast_to = Vector2( 0, -5 )

[node name="WallRay" type="RayCast2D" parent="."]
position = Vector2( 10, -6 )
z_index = -1
enabled = true
cast_to = Vector2( 0, 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.343 )
z_index = -1
shape = SubResource( 7 )

[node name="HitEmArea" type="Area2D" parent="."]
visible = false
position = Vector2( -558.147, -34.6389 )
z_index = -1

[node name="HitEmCol" type="CollisionShape2D" parent="HitEmArea"]
position = Vector2( 556.468, 41.9923 )
shape = SubResource( 8 )

[node name="HitArea" type="Area2D" parent="."]
visible = false
z_index = -1

[node name="HurtBox" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -1.85114, 5.40458 )
shape = SubResource( 9 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Step1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 300.0

[node name="Step2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 300.0

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0
max_distance = 300.0
[connection signal="body_entered" from="HitEmArea" to="." method="_on_HitEmArea_body_entered"]
[connection signal="body_exited" from="HitEmArea" to="." method="_on_HitEmArea_body_exited"]
